# tauri-deno-starter

./: .gitignore  build.ts  bundle.ts  deno.json  readme.md
src-tauri/: Cargo.toml  tauri.conf.json
www/: App.tsx  index.html  index.tsx
